--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: heroicons
 description: HeroIcons set of SVG icons in your Flutter app. Both outlined & solid icon version are available.
-version: 0.4.0
+version: 0.5.0
 homepage: https://github.com/vaetas/heroicons
 
 environment:
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^0.23.0+1
+  flutter_svg: ^1.0.3
   path: ^1.8.0
 
 dev_dependencies:
